update documentation and ipynb

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Classification of Characters in Super Smash Bros. Melee\n",
+        "# Classification Task Writeup\n",
         "-----"
       ]
     },
@@ -19,6 +19,7 @@
         " - [Extract Features](#Extract-Features)\n",
         " - [Train the Network](#Train-the-Network)\n",
         " - [Test the Network](#Test-the-Network)\n",
+        "- [Discussion](#Discussion)\n",
         "- [Appendix - Data Generation](#Appendix---Data-Generation)\n",
         " - [Install Dolphin](#Install-Dolphin)\n",
         " - [Make Images and Masks](#Make-Images-and-Masks)\n",
@@ -179,9 +180,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "First, let’s have a look at the images used to train the CNN",
-        ".  Over 100,000 images were used, so this is just a random s",
-        "ample."
+        "First, let me show some of the images used to train the CNN.",
+        "  Over 100,000 images were used, so this is just a random sa",
+        "mple."
       ]
     },
     {
@@ -296,10 +297,10 @@
       "metadata": {},
       "source": [
         "Without additional metadata about the captured images, such ",
-        "as character bounding boxes or pose annotation points, we ca",
-        "nnot easily compute rich statistics about the images.  Howev",
-        "er, visual inspection suggests the following differences to ",
-        "me:  \n",
+        "as character bounding boxes or pose annotation points, I can",
+        "not easily compute rich statistics about the images.  Howeve",
+        "r, visual inspection suggests the following differences to m",
+        "e:  \n",
         "  \n",
         "- **Size within frame**\n",
         "  - Characters in captured images rarely fill more than 10% ",
@@ -340,16 +341,16 @@
       "metadata": {},
       "source": [
         "Running image data through VGG16 is computationally expensiv",
-        "e, so we would like to do it just once and cache the results",
-        " for the later fine-tuning work.  These results are typicall",
-        "y thought of as “important features” that have been “extract",
-        "ed” from the image data, realized as a very large floating p",
-        "oint array.  \n",
+        "e, so I will do it just once and cache the results for the l",
+        "ater fine-tuning work.  These intermediate results I am cach",
+        "ing are typically thought of as “important features” that ha",
+        "ve been “extracted” from the image data.  The extracted feat",
+        "ures are realized as a very large floating point array.  \n",
         "  \n",
         "This caching technique trades off increased memory requireme",
         "nts against decreased computational time.  Fortunately, memo",
         "ry is cheap relative to GPU compute, so this trade off makes",
-        " sense for our problem."
+        " sense for my problem."
       ]
     },
     {
@@ -358,8 +359,8 @@
       "source": [
         "The following code blocks set up the VGG model.  \n",
         "  \n",
-        "We want to take advantage of the GPUs available to us, which",
-        " we can do with the function `keras.utils.multi_gpu_model`. ",
+        "I want to take advantage of all the available GPUs, which I ",
+        "accomplish with the function `keras.utils.multi_gpu_model`. ",
         " This function accepts a template model (typically compiled ",
         "for a CPU-only architecture) and creates an identical model ",
         "compiled for a multi-GPU architecture."
@@ -414,10 +415,10 @@
         "The following code blocks set up the data flow into the mode",
         "l.  \n",
         "  \n",
-        "As with most transfer learning work, we must preprocess our ",
-        "images to match key statistical features of the original dat",
-        "a set.  The function `keras.applications.imagenet_utils.prep",
-        "rocess_input` does just this."
+        "As with most transfer learning work, I must preprocess the i",
+        "mages to match key statistical features of the original data",
+        " set.  The function `keras.applications.imagenet_utils.prepr",
+        "ocess_input` does precisely this."
       ]
     },
     {
@@ -462,22 +463,24 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Due to the design of the Keras library, we can’t easily extr",
-        "act features from our images and simultaneously retain the i",
-        "mage labels.  To work around this, we’re going to iterate ov",
-        "er our images twice, in the same deterministic order both ti",
-        "mes, pulling out features one time and labels the other."
+        "Due to the design of the Keras library, I can’t retain the i",
+        "mage labels through the image feature extraction code.  To w",
+        "ork around this, I iterate over the images twice, in the sam",
+        "e deterministic order both times, pulling out features one t",
+        "ime and labels the other."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "For feature extraction, we will use the `model.predict_gener",
-        "ator` API that requires a generator that emits solely arrays",
-        " of images (as opposed to pairs like `(image_array, label_ar",
-        "ray)`).  To get this required generator we use `class_mode: ",
-        "None` and `shuffle: False`."
+        "For feature extraction, I use the `model.predict_generator` ",
+        "API, which requires a generator that emits solely arrays of ",
+        "images (as opposed to pairs like `(image_array, label_array)",
+        "`).  To get this required generator I set the keyword parame",
+        "ter `class_mode=None`.  I also set the keyword parameter `sh",
+        "uffle=False` so that the features are extracted in determini",
+        "stic order."
       ]
     },
     {
@@ -496,9 +499,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "For label extraction, we will use `shuffle: False` again to ",
-        "iterate in the same order as above, but we fall back to the ",
-        "default `class_mode` in order to retain the labels.="
+        "For label extraction, I set the keyword parameter `shuffle=F",
+        "alse` again to iterate in the same order as above, but I fal",
+        "l back to the default `class_mode` in order to retain image ",
+        "labels."
       ]
     },
     {
@@ -516,8 +520,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "After we define some helper functions, we’ll finally be read",
-        "y to extract our two arrays."
+        "Keras’ image data generator API will actually generate image",
+        "s indefinitely.  This supports the common use case of contin",
+        "uously running a neural network for an arbitrary number of e",
+        "pochs.  To end the generation early, I first define a few he",
+        "lper functions."
       ]
     },
     {
@@ -553,8 +560,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Note that the following code can take a significant amount o",
-        "f time to run."
+        "Now I extract the training image features and labels.  Note ",
+        "that the following code can take a significant amount of tim",
+        "e to run."
       ]
     },
     {
@@ -582,8 +590,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now let’s extract the analogous pair of arrays for our valid",
-        "ation data."
+        "Now I extract the analogous pair of arrays for the validatio",
+        "n images."
       ]
     },
     {
@@ -619,10 +627,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now we have our training and validation arrays, but they are",
-        " in non-random order.  Before we can train our final neural ",
-        "network we must randomize them, being careful to preserve th",
-        "e pairwise correlation between features and labels ."
+        "Now I have training and validation arrays, but they are in n",
+        "on-random order.  Before training the neural network I rando",
+        "mize these arrays, being careful to preserve the pairwise co",
+        "rrelation between features and labels."
       ]
     },
     {
@@ -653,11 +661,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We’ll build our model in a CPU environment but compile it fo",
-        "r a GPU environment.  Because our classes are relatively bal",
-        "anced in terms of number of images, we’ll use categorical cr",
-        "ossentropy as our loss and classification accuracy as our me",
-        "tric."
+        "In the following code, I build the model in a CPU environmen",
+        "t but compile it for a GPU environment.  Because the class l",
+        "abels are relatively balanced in terms of number of images, ",
+        "I use categorical crossentropy as the loss function and clas",
+        "sification accuracy as the headline metric."
       ]
     },
     {
@@ -723,7 +731,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Let’s visualize our model as a quick sanity check."
+        "Here’s a quick summary of the model, as a sanity check."
       ]
     },
     {
@@ -767,23 +775,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Due to a bug in Keras, we cannot directly save the weights a",
-        "nd structure of a model compiled for multiple GPUs.  However",
-        ", the multi-GPU model object shares both structure and weigh",
-        "ts with the template model object, which we can save to disk",
-        "."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Before we save the `template_model`, however, we must rememb",
-        "er that it is not yet useable for testing / production.  It ",
-        "expects an array of VGG16 features, but in testing we will p",
-        "rovide new images.  So now we’ll stack the `template_model` ",
-        "on top of the `template_vgg_model` and save the result to di",
-        "sk."
+        "Due to a bug in Keras, I cannot directly save the weights an",
+        "d structure of a model compiled for multiple GPUs.  However,",
+        " the multi-GPU model object shares both structure and weight",
+        "s with the template model object, which can be saved to disk",
+        ".  \n",
+        "  \n",
+        "The `template_model`, however, is not yet useable for testin",
+        "g / production.  It expects an array of VGG16 features, but ",
+        "testing will instead provide images.  \n",
+        "  \n",
+        "The remedy is to first stack the `template_model` on top of ",
+        "the `template_vgg_model` and then save the stacked result to",
+        " disk."
       ]
     },
     {
@@ -815,11 +819,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "To compare true classification labels with the predictions o",
-        "ur model emits, we’ll need to iterate twice over our test im",
-        "ages in deterministic order.  One pass will run the images t",
-        "hrough the model to produce predicted labels, and the other ",
-        "will collect the true labels for the images."
+        "To compare true classification labels with the predictions t",
+        "he model emits, I’ll iterate twice over the test images: one",
+        " pass will run the images through the model to produce predi",
+        "cted labels; the other will collect the true labels for the ",
+        "images."
       ]
     },
     {
@@ -922,9 +926,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "By default our class labels are encoded as integers, but we ",
-        "can find the actual class names as taken from the folder hie",
-        "rarchy if we know where to look."
+        "By default the class labels are encoded as integers, but the",
+        " actual class names used by the `label_generator` object can",
+        " be used instead."
       ]
     },
     {
@@ -941,7 +945,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now we can visualize our accuracy!"
+        "Visualize the model accuracy!"
       ]
     },
     {
@@ -951,6 +955,47 @@
       "outputs": [],
       "source": [
         "plot_confusion_matrix(c_matrix, class_names, normalize=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Discussion"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "It is a truth universally acknowledged, that every data scie",
+        "nce project is 99% data and 1% science.  This project is har",
+        "dly an exception.  Almost a thousand hours of individual eff",
+        "ort went into the data generation process, while only a few ",
+        "tens of hours went into the model fitting and testing.  It i",
+        "s my hope that the generated images, as well as the flexible",
+        " code behind them, will be of use to future projects; I have",
+        " ambitions to train an object localizer and pose recognizer ",
+        "next."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "From my testing of restricted data sets and various network ",
+        "designs, the full data set of ~150k images is necessary to t",
+        "rain a model to achieve above 95% accuracy.  I attribute thi",
+        "s requirement to two limitations of the model: first, I am t",
+        "ransferring VGG16 to a domain almost totally unlike the orig",
+        "inal training environment; and second, my use of bottleneck ",
+        "feature extraction prevents data augmentation techniques.  I",
+        "f I had opted to spend more money on AWS compute, I could ha",
+        "ve experimented with less data and a completely novel neural",
+        " network architecture.  For reasons outlined above, I chose ",
+        "to use the transfer learning technique specifically to take ",
+        "advantage of my large data set and to reduce AWS compute exp",
+        "enses."
       ]
     },
     {
@@ -971,12 +1016,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "For interested parties, the following describes the code to ",
-        "generate the custom images.  Not all the code will be covere",
-        "d, in particular I assume the reader is familiar with [GNU M",
-        "ake](https://www.gnu.org/software/make/manual/make.html) and",
-        " can read the [Makefile](Makefile) included in this reposito",
-        "ry."
+        "For interested parties, the following describes the code use",
+        "d to generate the custom images.  Not all the code will be c",
+        "overed, in particular I assume the reader is familiar with [",
+        "GNU Make](https://www.gnu.org/software/make/manual/make.html",
+        ") and can read the [Makefile](Makefile) included in this rep",
+        "ository."
       ]
     },
     {
@@ -1086,12 +1131,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Note that proper mask generation requires recording a mask v",
-        "ideo that is frame-for-frame synchronized with a correspondi",
-        "ng image video, and thus Dolphin must run at the same CPU sp",
-        "eed during both image and mask video recording.  For this re",
-        "ason I recorded all videos on my laptop, as I could not forc",
-        "e EC2 instances to run at any constant speed."
+        "Note that proper mask generation requires a masked video tha",
+        "t is frame-for-frame synchronized with a corresponding image",
+        " video, and thus Dolphin must run at the same CPU speed duri",
+        "ng both image and mask video recording.  For this reason I r",
+        "ecorded all videos on my laptop, as I could not force EC2 in",
+        "stances to run at any constant speed."
       ]
     },
     {
@@ -1105,10 +1150,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The following describes the code to preprocess previously ge",
-        "nerated images for keras modeling.  As with the [data genera",
-        "tion](#Data-Generation) documentation, not all code will be ",
-        "covered."
+        "The following describes the code used to preprocess generate",
+        "d images for keras modeling.  As with the [data generation](",
+        "#Data-Generation) documentation, not all code will be covere",
+        "d."
       ]
     },
     {
