--- a/smash.org
+++ b/smash.org
@@ -2866,6 +2866,7 @@ Sho didn’t!  If anything, that just made it better (25% more data!)
 ** Classification Task Writeup
 #+METADATA: (("git" ("suppress_outputs" . t)))
 #+SESSION: smash
+#+EXPORT_FILE_NAME: classification
 #+TITLE: Classification of Characters in Super Smash Bros. Melee
 
 Note: *I am a data scientist in the Bay Area!  Feel free to contact me with questions, concerns, offers for work ;)*
