update documentation and ipynb

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Classification Task Writeup\n",
+        "# Classification of Characters in Super Smash Bros. Melee\n",
         "-----"
       ]
     },
