--- a/smash.org
+++ b/smash.org
@@ -3424,10 +3424,11 @@ You may set the Make variables =KERAS_RAND_SEED=, =KERAS_TRAIN_PCT=, =KERAS_TEST
 * Readme for Github
 :PROPERTIES:
 :EXPORT_FILE_NAME: README
+:EXPORT_TITLE:
 :END:
 This repository contains my notes and work applying neural networks to footage from the [[https://en.wikipedia.org/wiki/Super_Smash_Bros._Melee][Super Smash Bros. Melee]] video game.
 
-Currently, I have used transfer learning techniques to train a VGG16-based neural network to classify images of single characters.  See the [[file:classification.ipynb][classification notebook]] for details.
+So far, I have used transfer learning techniques to train a VGG16-based neural network to classify images of single characters.  See the [[file:classification.ipynb][classification notebook]] for details.
 
 Next, I will train a network to locate a character within an image.  Then locate and classify two characters in the same image.
 
